@@ -1,5 +1,6 @@
 ## PLUXML 5.1.7 (sortie : 25/01/2013) ##
 
+[+] Sitemap: ajout des hooks SitemapBegin et SitemapEnd
 [+] Récupération automatique de la racine du site
 [-] Suppression du paramètre racine dans le fichier de configuration parametres.xml
 BUG fix #4  Gestionnaire de médias: mauvais tri ddu déroulant 'Dossier'
